# inframint

./: .gitignore  README.md  deploy.sh  docker-compose.yml
backend/: Cargo.toml  Dockerfile  build.rs
backend/migrations/: 001_initial_schema.sql  002_seed_data.sql
backend/src/: config.rs  main.rs  middleware.rs  validator.rs
backend/src/auth/: mod.rs
backend/src/db/: mod.rs
backend/src/handlers/: admin.rs  auth.rs  entitlements.rs  mod.rs  services.rs  stats.rs
backend/src/middleware/: mod.rs
backend/src/models/: mod.rs  service.rs  user.rs
backend/src/routes/: mod.rs
backend/src/utils/: errors.rs  mod.rs
contracts/: Move.toml
contracts/sources/: inframint_entitlements.move
contracts/tests/: entitlements_tests.move
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/auth/: WalletConnect.tsx
frontend/src/components/common/: Button.tsx
frontend/src/components/layout/: Layout.tsx
frontend/src/hooks/: useWallet.ts  useWalletAuth.ts
frontend/src/pages/: CreateServicePage.tsx  CreateServiceSuccessPage.tsx  HomePage.tsx  NotFound.tsx  ProviderDashboardPage.tsx  PurchaseConfirmationPage.tsx  ServiceDetailPage.tsx  ServicesPage.tsx
frontend/src/stores/: useAuthStore.ts
validator/: Cargo.toml  Dockerfile  build.rs
validator/proto/: validator.proto
validator/src/: blockchain.rs  cache.rs  config.rs  error.rs  main.rs  rate_limit.rs
validator/tests/: validator_tests.rs
