[package]
name = "inframint-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
jsonwebtoken = "9.2.0"
argon2 = "0.5.3"
tower-http = { version = "0.5.2", features = ["cors"] }
validator = { version = "0.16.0", features = ["derive"] }
thiserror = "1.0.57"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"
config = "0.14.0"
reqwest = { version = "0.11.24", features = ["json"] }
redis = { version = "0.25.2", features = ["tokio-comp"] }
once_cell = "1.19.0"
tonic = "0.11.0"
prost = "0.12.3"

[build-dependencies]
tonic-build = "0.11.0"

[dev-dependencies]
axum-test-helper = "0.3.0"
tokio = { version = "1.36.0", features = ["full"] }
