[package]
name = "inframint-validator"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["full"] }
redis = { version = "0.25.2", features = ["tokio-comp"] }
ethers = { version = "2.0.10", features = ["rustls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenvy = "0.15.7"
thiserror = "1.0.57"
async-trait = "0.1.77"
once_cell = "1.19.0"
config = "0.13.3"
chrono = "0.4.31"

[build-dependencies]
tonic-build = "0.11.0"
prost-build = "0.12.3"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["full"] }
